fix(Card.module.scss): overflow on mobile browser

--- a/styles/Article/CardDeck/Card/Card.module.scss
+++ b/styles/Article/CardDeck/Card/Card.module.scss
@@ -3,7 +3,7 @@
 
     &__body {
         max-height: 300px;
-        overflow: clip;
+        overflow: hidden;
     }
     
     &__title {
